I have changed all the flip card backgrounds to lilac to increase the contrast of the text. I also reduced the height of all the flip cards and images to 360px.

--- a/Streetwear's evolution.html
+++ b/Streetwear's evolution.html
@@ -66,7 +66,7 @@
                             <div class="skating">
                                 <div class="skating-inner">
                                     <div class="skating-front">
-                                        <img src="skating.jpg" width= "309px" height="335px" alt="skater">
+                                        <img src="skating.jpg" width= "309px" height="360px" alt="skater">
                                     </div>
                                         <!-- Allows me to style the back of the card in css-->
                                         <div class="skating-back">
@@ -82,14 +82,14 @@
                             <div class="japanese-streetwear">
                                 <div class="japanese-streetwear-inner">
                                     <div class="japanese-streetwear-front">
-                                        <img src="cdg.jpg" width= "309px" height="460px" alt="CDG trainers">
+                                        <img src="cdg.jpg" width= "309px" height="360px" alt="CDG trainers">
                                     </div>
                                         <!-- Allows me to style the back of the card in css-->
                                         <div class="japanese-streetwear-back">
                                              <!-- Flip card header-->
                                             <h1> Japanese Streetwear</h1>
                                              <!-- Flip card text-->
-                                            <p> Japanese streetwear is also known as the Harajuku aesthetic, is very prevalent in global streetwear culture. In the 70s and 80s, Japanese youth began to rebel against the elder's traditions and embrace the western culture. Japanese streetwear is a representation of this defiance and non-conformitism. These themes are still present in streetwear today, making it a key form of expression amongst creatives, globally.<strong><a href="Japanese Streetwear.html" target="_blank" class="links">Read More</a></strong></p>
+                                            <p> Japanese streetwear is also known as the Harajuku aesthetic, is very prevalent in global streetwear culture. In the 70s and 80s, Japanese youth began to rebel against the elder's traditions and embrace the western culture. Japanese streetwear is a representation of this defiance and non-conformitism. These themes are still present in streetwear today.<strong><a href="Japanese Streetwear.html" target="_blank" class="links">Read More</a></strong></p>
                                         </div>
                                 </div>
                             </div>
@@ -117,7 +117,7 @@
                             <div class="street-art">
                                 <div class="street-art-inner">
                                     <div class="street-art-front">
-                                        <img src="Street-art.png" width= "309px" height="335px" alt="street art">
+                                        <img src="Street-art.png" width= "309px" height="360px" alt="street art">
                                     </div>
                                         <!-- Allows me to style the back of the card in css-->
                                         <div class="street-art-back">
@@ -133,14 +133,14 @@
                             <div class="haute-coture">
                                 <div class="haute-coture-inner">
                                     <div class="haute-coture-front">
-                                        <img src="LV-Trainers.jpg" width= "310px" height="460px" alt="Louis Vutton & Nike Air Jordan 1 Trainers">
+                                        <img src="LV-Trainers.jpg" width= "310px" height="360px" alt="Louis Vutton & Nike Air Jordan 1 Trainers">
                                     </div>
                                       <!-- Allows me to style the back of the card in css-->
                                         <div class="haute-coture-back">
                                              <!-- Flip card header-->
                                             <h1> Haute Coture</h1>
                                             <!-- Flip card text-->
-                                            <p> The 80s were crucial to the Streetwear, Haute Coture crossover which created streewear as we know it today. With brands like Supreme with roots in skate culutre reaching $1billion valuation in 2017 and collaborating with the likes of LV.   High end designers collaborating with streetwear brands has become increasingly common. Street culture continues to evolve and push the boundaries.  If you would like to contribute to its evolution,<strong><a href="Exclusives.html" target="_blank"class="links">Join us and stay up to date.</a></strong></p>
+                                            <p> The 80s were crucial to Streetwear, Haute Coture crossover which created streewear as we know it today. With brands like Supreme with roots in skate culutre reaching $1billion valuation in 2017 and collaborating with the likes of LV.   High end designers collaborating with streetwear brands has become common. Street culture will continue to evolve.  If you would like to contribute to its evolution.<strong><a href="Exclusives.html" target="_blank"class="links">Join us !</a></strong></p>
                                         </div>
                                 </div>
                             </div>
