--- a/Streetwear's evolution.html
+++ b/Streetwear's evolution.html
@@ -23,7 +23,7 @@
             </section> 
             
          <!-- adds logo to the page header -->
-                 <img src = "Media/Logo.png" type= "png" class="logo"/>  
+                 <img src = "Media/Logo.png" alt="Logo" type= "png" class="logo"/>  
     </head>
 
          <!-- lets me styke background using css -->
@@ -50,7 +50,7 @@
                         <div class="Hip-hop">
                             <div class="Hip-hop-inner">
                                 <div class="Hip-hop-front">
-                                    <img src="Media/hip-hop.jpg" width= "310px" height="360px" alt="break dancer">
+                                    <img src="Media/hip-hop.jpg" width= "310px" height="360px" alt="Break dancer">
                                 </div>
                                     <!-- Allows me to style the back of the card in css-->
                                     <div class="Hip-hop-back">
@@ -66,7 +66,7 @@
                             <div class="skating">
                                 <div class="skating-inner">
                                     <div class="skating-front">
-                                        <img src="Media/skating.jpg" width= "309px" height="360px" alt="skater">
+                                        <img src="Media/skating.jpg" alt="Skating" width= "309px" height="360px" alt="skater">
                                     </div>
                                         <!-- Allows me to style the back of the card in css-->
                                         <div class="skating-back">
@@ -82,7 +82,7 @@
                             <div class="japanese-streetwear">
                                 <div class="japanese-streetwear-inner">
                                     <div class="japanese-streetwear-front">
-                                        <img src="Media/cdg.jpg" width= "309px" height="360px" alt="CDG trainers">
+                                        <img src="Media/cdg.jpg" alt="Commes Des Garcons Trainers" width= "309px" height="360px" alt="CDG trainers">
                                     </div>
                                         <!-- Allows me to style the back of the card in css-->
                                         <div class="japanese-streetwear-back">
@@ -101,7 +101,7 @@
                             <div class="basketball">
                                 <div class="basketball-inner">
                                     <div class="basketball-front">
-                                        <img src="Media/basketball.jpg" width= "310px" height="360px" alt="basketball">
+                                        <img src="Media/basketball.jpg" alt="Basketball" width= "310px" height="360px" alt="basketball">
                                     </div>
                                         <!-- Allows me to style the back of the card in css-->
                                         <div class="basketball-back">
@@ -117,7 +117,7 @@
                             <div class="street-art">
                                 <div class="street-art-inner">
                                     <div class="street-art-front">
-                                        <img src="Media/Street-art.png" width= "309px" height="360px" alt="street art">
+                                        <img src="Media/Street-art.png" alt="Street-art" width= "309px" height="360px" alt="street art">
                                     </div>
                                         <!-- Allows me to style the back of the card in css-->
                                         <div class="street-art-back">
@@ -133,7 +133,7 @@
                             <div class="haute-coture">
                                 <div class="haute-coture-inner">
                                     <div class="haute-coture-front">
-                                        <img src="Media/LV-Trainers.jpg" width= "310px" height="360px" alt="Louis Vuitton & Nike Air Jordan 1 Trainers">
+                                        <img src="Media/LV-Trainers.jpg" alt="Louis Vuitton Trainers" width= "310px" height="360px" alt="Louis Vuitton & Nike Air Jordan 1 Trainers">
                                     </div>
                                       <!-- Allows me to style the back of the card in css-->
                                         <div class="haute-coture-back">
@@ -146,12 +146,12 @@
                             </div>
                         </section> 
                             <section class="pictures">
-                                <a href="Hip-Hop.html"target="_blank"class="links"><img src="Media/hip-hop.jpg" width="320px" height="400px"></a>
-                                <a href="Skating.html" target="_blank"class="links"><img src="Media/skating.jpg" width="320px" height="400px"></a>
-                                <a href="Japanese Streetwear.html" target="_blank" class="links"><img src="Media/cdg.jpg" width="320px" height="400px"></a>
-                                <a href="Basketball.html" target="_blank"class="links"><img src="Media/basketball.jpg" width="320px" height="400px"></a>
-                                <a href="Street-art.html"target="_blank" class="links"><img src="Media/Street-art.png"width="320px" height="400px"></a>
-                                <a href="Exclusives.html" target="_blank"class="links"><img src="Media/LV-Trainers.jpg"width="320px" height="400px"></a>
+                                <a href="Hip-Hop.html"target="_blank"class="links"><img src="Media/hip-hop.jpg" alt="Break dancer" width="320px" height="400px"></a>
+                                <a href="Skating.html" target="_blank"class="links"><img src="Media/skating.jpg" alt="Skater Skating" width="320px" height="400px"></a>
+                                <a href="Japanese Streetwear.html" target="_blank" class="links"><img src="Media/cdg.jpg" alt="Commes Des Garcons Trainers" width="320px" height="400px"></a>
+                                <a href="Basketball.html" target="_blank"class="links"><img src="Media/basketball.jpg" alt="basketball" width="320px" height="400px"></a>
+                                <a href="Street-art.html"target="_blank" class="links"><img src="Media/Street-art.png" alt="Street-art" width="320px" height="400px"></a>
+                                <a href="Exclusives.html" target="_blank"class="links"><img src="Media/LV-Trainers.jpg" alt="Louis Vuitton Trainers" width="320px" height="400px"></a>
                             </section>
                            
     </body>
