I have added alt text to all the media on the about us page.

--- a/about us.html
+++ b/about us.html
@@ -23,11 +23,11 @@
     </head>
     <body>
       <!-- this adds the image to the body of the about us page-->
-         <img src= "Media/Man .png" type="png" class="background">
+         <img src= "Media/Man .png" alt="Young Male" type="png" class="background">
 
        <!-- this is content for the left half of the background which I will style using css-->
          <section class="colour">
-              <img src = "Media/Logo.png" type= "png" width="200" class="logo"/>
+              <img src = "Media/Logo.png" alt="Logo" type= "png" width="200" class="logo"/>
               <br><br>
               <h1 class="header"> Our Mission</h1>
               <br><br>
@@ -40,7 +40,7 @@
                  <strong>Location: 21 Vibe Street, CR3 4TE</strong>
               </p2>
               <br><br>
-              <img src="Media/Spiral-nbg.png" class="Spiral"/>
+              <img src="Media/Spiral-nbg.png" alt="Purple Spiral" class="Spiral"/>
          </section>  
     </body>
       <footer>
