I have added alt text to all the media on the landing page.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
       <!-- this only applies to the landing page menu and adds the logo which I can then style--> 
       <section class="landing-page-header">
-          <img src = "Media/Logo.png" type= "png" width="200" class="logo"/>
+          <img src = "Media/Logo.png" alt="Logo" type= "png" width="200" class="logo"/>
       </section>
 
       <!-- this applies to the landing page menu and allows me to create the buttons with icons and link them to the relevant pages. This section of code also allows me to use css to style the menu only --> 
@@ -33,8 +33,8 @@
 
    <body>
       <!-- adds the video to the body section of the landing page, making sure it is muted,looped and plays automatically. This part of the code also allows me to style the video using css --> 
-      <video src="Media/MS1 Landing page .mp4"type= "video/MP4" muted loop autoplay class="video"></video>
-      <img src="Media/MS1-Landing-page-smaller-screens.jpg" class="smaller-screens"></img>
+      <video src="Media/MS1 Landing page .mp4" alt="futuristic couple video" type= "video/MP4" muted loop autoplay class="video"></video>
+      <img src="Media/MS1-Landing-page-smaller-screens.jpg" alt="futuristic couple image" class="smaller-screens"></img>
    </body>
 
    <footer>
