I have added alt text to all the media on the come to the hub page.

--- a/come to the hub.html
+++ b/come to the hub.html
@@ -24,9 +24,9 @@
     </Head>
     <body>
         <!-- location of the body image and allows me to style it-->
-        <img src="Media/woman.png" type="png"class="img"/>
+        <img src="Media/woman.png" alt="futuristic woman" type="png"class="img"/>
           <!-- location of the logo image and allows me to style it-->
-          <img src = "Media/Logo.png" type= "png" class="logo"/>
+          <img src = "Media/Logo.png" alt="Logo" type= "png" class="logo"/>
             <!--  allows me to style the table-->
             <div class="style">
               <!--  Sets table content -->
