I have added alt text to all the media on the exclusives page.

--- a/Exclusives.html
+++ b/Exclusives.html
@@ -23,7 +23,7 @@
     </head>
     <body>
         <!-- sets location of logo image and allows me to style it-->
-        <img src = "Media/Logo.png" type= "png" class="Logo"/>
+        <img src = "Media/Logo.png" alt="Logo" type= "png" class="Logo"/>
           <br><br><br>
           <!-- sets header texts and allows me to style it-->
             <h1 class="txt" > Sign up for exclusive events, drops and updates !!</h1>
@@ -68,8 +68,8 @@
               <!--  "controls" allows video to be controlled by user. "Preload" allows the video to automaticaly preload."class" allows me to stlye the video-->
                     <video  controls preload="auto" class="video">
                       <!-- Location and type of video.-->
-                        <source src="Media/Streetwear.mp4" type= "video/mp4">
-                        <source src="Media/Streetwear.ogg" type= "video/ogg">  
+                        <source src="Media/Streetwear.mp4" alt="Streetwear video"type= "video/mp4">
+                        <source src="Media/Streetwear.ogg" alt="Streetwear video" type= "video/ogg">  
                     </video>
     </body>
       <footer>
