I have updated the code comments for all the pages

--- a/come to the hub.html
+++ b/come to the hub.html
@@ -13,7 +13,7 @@
      <script src="https://kit.fontawesome.com/6e65cbaf0a.js" crossorigin="anonymous"></script>
      <link href="https://fonts.googleapis.com/css2?family=Rowdies&family=Work+Sans:wght@300;600&display=swap" rel="stylesheet">
 
-        <!-- this only applies to the landing page menu. Creates a list for the social media icons which I can then style-->
+        <!-- This only applies to the landing page menu, creates the navigation bar and icons which I can then style-->
         <section class="landing-page-menu">
              <a href="index.html"><i class="fa fa-fw fa-home"></i> Home</a>
              <a href="about us.html"><i class="fa fa-fw fa-user"></i> About us</a>
