--- a/Exclusives.html
+++ b/Exclusives.html
@@ -11,7 +11,7 @@
          <!-- this allows me to import icons from font awseome and fonts from google fonts -->
         <script src="https://kit.fontawesome.com/6e65cbaf0a.js" crossorigin="anonymous"></script>
 
-            <!-- this only applies to the landing page menu. Creates a list for the social media icons which I can then style-->
+            <!-- this only applies to the landing page menu, creates the navigation bar and icons which I can then style-->
             <section class="landing-page-menu">
                 <a href="index.html"><i class="fa fa-fw fa-home"></i> Home</a>
                 <a href="about us.html"><i class="fa fa-fw fa-user"></i> About us</a>
